Fix mobile layout not fitting viewport

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,14 +31,39 @@ body > footer {
 
 .entry-list {
   display: grid;
-  grid-auto-flow: row;
-  grid-template-columns: 25% 25% 25% 25%;
   padding: 8px 0px;
-  gap: 1.25rem;
+  grid-auto-flow: row;
+  justify-content: space-evenly;
+  gap: 1rem;
 }
 
-.entry-list > div > button {
-  width: 101%;
+@media only screen and (min-width: 640px) {
+  .entry-list {
+    grid-template-columns: 45% 45%;
+  }
+  .entry-list > div > button {
+    width: 80%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .entry-list {
+    grid-template-columns: 30% 30% 30%;
+    grid-auto-flow: row;
+  }
+  .entry-list > div > button {
+    width: 101%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .entry-list {
+    grid-template-columns: 22% 22% 22% 22%;
+    grid-auto-flow: row;
+  }
+  .entry-list > div > button {
+    width: 101%;
+  }
 }
 
 .modal-overlay {
